projects/ingress.yml
#apiVersion: networking.k8s.io/v1
apiVersion: extensions/v1beta1
#apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doomain-ir
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins.doomain.ir
    http:
      paths:
      - backend:
          serviceName: jenkins-svc
          servicePort: 8080
  - host: nginx.doomain.ir
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
